=head1 NAME

Changes - History of significant changes in Devel::NYTProf

=cut

=head2 Changes in Devel::NYTProf 5.02 - 21st April 2013

  Fix Windows build, properly RT#84738.

=head2 Changes in Devel::NYTProf 5.01 - 19th April 2013

  Fix Windows build RT#84738.

  Can't rely on #!-line to always work, PR#3
    thanks to Gisle Aas.

  Avoid triggering "gcc internal compiler error" PR#4
    thanks to Gisle Aas.

=head2 Changes in Devel::NYTProf 5.00 - 8th April 2013

  Added subroutine entry and return event stream,
    controlled via the calls=N option. Default calls=1.

  Added nytprofcalls command to process the call event stream to
    generate timings for distinct call stacks (experimental).

  Added Flame Graph visualization SVG using the call stack data.

  Changed blocks=N option to be 0 (disabled) by default.

  Fixed test for perl 5.17+ hash randomization.
  Fixed nytprofhtml for Windows thanks to Jan Dubois. PR#2
  Fixed assorted nits thanks to Steve Peters. PR#1
  Deprecated nytprofcsv - speak up if you use it!
  No longer warn about $&, $` and $' being slow if $] >= 5.017008.

=head2 Changes in Devel::NYTProf 4.25 - 6th Feb 2013

  Fix u2time clock (ie Time::HiRes, used by Windows)

=head2 Changes in Devel::NYTProf 4.24 - 3rd Feb 2013

  Clarify sigexit option docs.
  Loosen test timing constraints (for slow cpantester VMs).

=head2 Changes in Devel::NYTProf 4.23 - 31st Dec 2012

  Significant improvement in the accuracy of the subroutine profiler,
    especially for frequent calls to very short duration subs/ops,
    and more so for POSIX and OSX systems with sub-microsecond clocks.

  Fixed tests to work with perl 5.17.7+ (PL_sawampersand gone).
  Fixed some doc typos thanks to Jesse Sheidlower.
  Improved nytprofmerge behaviour with inconsistent attributes.
  Removed the usecputime=1 option. Use clock=N instead if possible.
  Moved main repo to git (and https://github.com/timbunce/devel-nytprof)

=head2 Changes in Devel::NYTProf 4.12 - 28th Dec 2012