@@ -52,5 +52,5 @@
       ],
       "x_MailingList" : "http://groups.google.com/group/develnytprof-dev"
    },
-   "version" : "5.02"
+   "version" : "5.03"
 }
