@@ -30,4 +30,4 @@ resources:
   homepage: https://code.google.com/p/perl-devel-nytprof/
   license: http://dev.perl.org/licenses/
   x_MailingList: http://groups.google.com/group/develnytprof-dev
-version: 5.02
+version: 5.03
