@@ -59,7 +59,7 @@ use Devel::NYTProf::Util qw(
 );
 use Devel::NYTProf::Constants qw(NYTP_SCi_CALLING_SUB);
 
-our $VERSION = '5.02';
+our $VERSION = '5.03';
 
 if ($VERSION != $Devel::NYTProf::Core::VERSION) {
     die "$0 version '$VERSION' doesn't match version '$Devel::NYTProf::Core::VERSION' of $INC{'Devel/NYTProf/Core.pm'}\n";
@@ -813,7 +813,8 @@ sub output_index_page {
             my $factor = 1_000_000 / $profile->{attribute}{ticks_per_sec};
             # total (width) for flamegraph is profiler_active in ticks
             my $run_us = $profile->{attribute}{profiler_active} * $profile->{attribute}{ticks_per_sec};
-            my $fg_cmd = "flamegraph.pl --nametype=sub --countname=microseconds";
+            my $extension = $^O eq "MSWin32" ? "" : ".pl";
+            my $fg_cmd = "flamegraph$extension --nametype=sub --countname=microseconds";
             system("$fg_cmd --factor=$factor --nameattr=$subattr --total=$run_us $opt_out/$call_stacks_file > $opt_out/$call_stacks_svg") == 0
                 or die "Generating $opt_out/$call_stacks_svg failed\n";
 
@@ -1607,6 +1608,7 @@ This file was generated by Devel::NYTProf version $Devel::NYTProf::Core::VERSION
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Language" content="en-us" />
+    <meta name="robots" content="noindex,nofollow" />
     <title>$title</title>
 EOD
 
